--- a/Exp2.html
+++ b/Exp2.html
@@ -13,6 +13,7 @@
         .special{color:brown; font-weight: bold;}
         .sp{color: rgb(219, 133, 20);}    
     </style>
+    <link rel="stylesheet" href="exp2.css">
 </head>
 <body>
 <h1 style ="color: #00ccff; font-family:Arial, Helvetica, sans-serif;">Types of Clocks</h1> 
