--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
 <body>
 	<h1>Menu</h1>
 	<ul>
-		<li><a href="file1.html">File 1</a></li>
-		<li><a href="file2.html">File 2</a></li>
-		<li><a href="file3.html">File 3</a></li>
+		<li><a href="frameset.html">File 1</a></li>
 	</ul>
 </body>
 </html>
