--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 	<h1>Menu</h1>
 	<ul>
-		<li><a href="frameset.html">File 1</a></li>
+		<li><a href="frameset.html">Exp-3</a></li>
 	</ul>
 </body>
 </html>
