--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
     <h1>Menu</h1>
     <ul>
-        <li><a href="New Folder/frameset.html">Exp3</a></li>
+        <li><a href="New+Folder/frameset.html">Exp3</a></li>
       
     </ul>
 </body>
